# librime-octagram

./: CMakeLists.txt
src/: gram_db.cc  gram_db.h  gram_encoding.cc  gram_encoding.h  grammar_module.cc  octagram.cc  octagram.h
tools/: CMakeLists.txt  build_grammar.cc
